# RubixCubeDetection

./: .gitignore  CMakeLists.txt  README.md  Tile.cpp  Tile.h  main.cpp
